# recurvefl

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md
contracts/: aiken.toml
contracts/lib/: bls_verify.ak  groth16_verify.ak  types.ak
contracts/tests/: round_tests.ak
contracts/validators/: commitment_inbox.ak  registry_contract.ak  round_contract.ak  thread_token.ak
coordinator/: .env.example  package-lock.json  package.json  tsconfig.json
coordinator/src/: cardano.ts  fl_runner.ts  index.ts  proof_bridge.ts  round_manager.ts  types.ts
demo/: README_DEMO.md  ivc_proof.json  run_demo.sh  vk_cardano.json
demo/keys/: pk_meta.json  vk.hex
demo/round_1/: aggregation_metadata.json  client_0_gradients.json  client_0_grads_plain.json  client_0_norm_proof.json  client_1_gradients.json  (+8 more)
fl-core/: evaluate.py  requirements.txt  run_fl_round.py
scripts/: generate_test_keys.sh  setup_all.sh
zk-prover/: Cargo.toml
zk-prover/demo/keys/: key_meta.json
zk-prover/demo/proofs/: gradient_merkle_root.txt  ivc_final.json  norm_proof_aggregated.json  norm_proof_client_1.json  norm_proof_client_2.json  proof_round_0.json  round_proof_1.json
zk-prover/demo/round_1/: aggregated_gradients.json  aggregation_metadata.json  client_0_gradients.json  client_1_gradients.json  client_2_gradients.json  global_model_round_1.pt  merkle_trees.json
zk-prover/src/: lib.rs  main.rs
zk-prover/src/circuits/: fl_round_circuit.rs  ivc_accumulator.rs  mod.rs  round_prover.rs
zk-prover/src/norm_proof/: bulletproof_norm.rs  mod.rs
zk-prover/tests/: integration_tests.rs
(+5 files in other folders)
