[package]
name = "zkfl-prover"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zkfl-prover"
path = "src/main.rs"

[dependencies]
# Arkworks suite for R1CS / Groth16 on BN254
ark-ff = { version = "0.4", features = ["parallel"] }
ark-ec = { version = "0.4", features = ["parallel"] }
ark-std = { version = "0.4" }
ark-bn254 = "0.4"
ark-groth16 = { version = "0.4", features = ["r1cs"] }
ark-r1cs-std = "0.4"
ark-relations = "0.4"
ark-snark = "0.4"
ark-serialize = "0.4"
ark-crypto-primitives = { version = "0.4", features = ["crh", "merkle_tree", "sponge"] }

# Bulletproofs for L2-norm range proofs
# bulletproofs 4.0 internally uses curve25519-dalek-ng (aliased as curve25519-dalek).
# We depend on curve25519-dalek-ng directly so our Scalar type matches bulletproofs'.
bulletproofs = "4.0"
curve25519-dalek-ng = { version = "4", package = "curve25519-dalek-ng" }
merlin = "3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
sha2 = "0.10"

# CLI
clap = { version = "4", features = ["derive"] }

# Rand
rand = "0.8"
rand_core = "0.6"

[features]
default = []
parallel = ["ark-ff/parallel", "ark-ec/parallel"]

[profile.release]
opt-level = 3
lto = "thin"
